Add java 14. Update and cleanup